--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -400,3 +400,8 @@ CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
+
+#
+# SPI Support
+#
+CONFIG_PACKAGE_kmod-mmc-spi=y
